anypoint-platform-pcf/v/1.6/pcf-mule-runtime-buildpack.adoc
= 安装Mule Runtime Buildpack
:keywords:pcf, pivotal cloud foundry, buildpack

Mule Runtime Buildpack是一个定制的Pivotal Cloud Foundry buildpack，它包含一个包含Mule Runtime和支持组件的映像。

当前版本的MuleSoft Runtime buildpack基于Pivotal Cloud Foundry Java Buildpack 4.2版本。基于旧版本的MuleSoft Runtime Buildpack仍然可用。兼容性基于Java buildpack的基本版本与PCF版本的兼容性。

您可以使用此buildpack部署Mule应用程序和API网关。

1.联系您的客户代表以请求Mule运行时构建包。
1.将buildpack下载到本地文件系统。
1.确保您已安装cf CLI命令行界面。
1.运行以下命令，在PCF安装中安装buildpack：
+
----
cf create-buildpack <BUILDPACK_NAME> <BUILDPACK_ZIP_PATH> <POSITION> --enable
----
+
使用以下参数：
+
[%autowidth.spread]
|===
|  BUILDPACK_NAME  | 您的buildpack的名称必须符合以下格式：`mule_runtime_buildpack_<runtime_version_number>`
|  BUILDPACK_ZIP_PATH  | 您的buildpack的本地路径
|  POSITION  | 在优先级列表中指定buildpack的位置。一般来说，这个值应该是1。
|   - 启用 | 允许您使用此buildpack推送应用程序
|===
+
例如，您运行的命令应类似于以下内容：
+
----
cf create-buildpack mule_runtime_buildpack_3_8_1 mule-runtime-buildpack-3.8.1.zip 1 --enable
----

Buildpack在全球范围内安装。您可以安装多个buildpack。部署Mule应用程序时，您可以选择使用哪个构建包。

== 另请参阅

*  link:https://github.com/cloudfoundry/java-buildpack/releases[Java Buildpack发行说明]
*  link:http://docs.pivotal.io/pivotalcf/1-8/buildpacks/java/index.html[Pivotal Java Buildpack]
*  link:pcf-buildpack-customize[自定义Mule Runtime Buildpack]
